--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 
                         </div>
-                        <div class="col-12 order-0 col-md-6 order-md-1">
+                        <div class="col-12 order-0 col-md-6 order-md-1 box1">
                             <div class=" mt-5">
                                 <p class="fs-4 text-danger font-monospace">About Mondson Trucking</p>
                                 <p class="fs-1 text-white font-monospace">Commitment to Excellence</p>
@@ -227,20 +227,20 @@
 
             <div class="row text-center">
                 <div class="col-12 col-md-8">
-                    <p class="font-monospace text-danger fs-5">Our Services</p>
-                    <p class="font-monospace text-white fs-3">Excellence in Transportation for Fresh Goods</p>
+                    <p class="font-monospace text-danger fs-5 box2">Our Services</p>
+                    <p class="font-monospace text-white fs-3 box2">Excellence in Transportation for Fresh Goods</p>
 
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 pb-3 box2">
 
-                    <button type="button" class="btn btn-danger">Contact Us</button>
+                    <button type="button" class="btn btn-danger ">Contact Us</button>
 
                 </div>
             </div>
 
             <div class="container">
                 <div class="row gy-5">
-                    <div class="col-12 col-md-4 bg-dark">
+                    <div class="col-12 col-md-4 bg-dark box3">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/ship-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Dry Van</p>
@@ -250,7 +250,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 bg-dark">
+                    <div class="col-12 col-md-4 bg-dark box4">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/aeroplane-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Drop Equipment</p>
@@ -259,7 +259,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 bg-dark">
+                    <div class="col-12 col-md-4 bg-dark box5">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/fleet-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Dedicated Fleet</p>
@@ -271,7 +271,7 @@
                     </div>
                 </div>
                 <div class="row gy-5 mt-3">
-                    <div class="col-12 col-md-4 bg-dark">
+                    <div class="col-12 col-md-4 bg-dark box6">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/post-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Temp Controlled</p>
@@ -281,7 +281,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 bg-dark">
+                    <div class="col-12 col-md-4 bg-dark box7">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/container-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Power Only</p>
@@ -291,7 +291,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 bg-dark">
+                    <div class="col-12 col-md-4 bg-dark box8">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/container-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Flatbed</p>
@@ -302,7 +302,7 @@
                     </div>
 
                 </div>
-                <div class="row gy-5 mt-3">
+                <div class="row gy-5 mt-3 box9">
                     <div class="col-12 col-md-4 bg-dark ">
                         <div class="container p-4">
                             <img src="./assets/girl-icon.webp" alt="" width="30px">
@@ -313,7 +313,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 bg-dark ">
+                    <div class="col-12 col-md-4 bg-dark box10">
                         <div class="container p-4">
                             <img src="./assets/girl-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Expedited</p>
@@ -322,7 +322,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 bg-dark ">
+                    <div class="col-12 col-md-4 bg-dark box11">
                         <div class="container p-4">
                             <img src="./assets/girl-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Partial Truckload</p>
@@ -347,10 +347,10 @@
             <div class="container bg-danger  ">
                 <div class="row ">
                     <div class="col-12 col-md-6 ">
-                        <div class="container pt-5">
+                        <div class="container pt-5 box12">
 
 
-                            <p class="font-monospace fs-5 text-white"> GET STARTED</p>
+                            <p class="font-monospace fs-5 text-white "> GET STARTED</p>
                             <p class="font-monospace fs-3 text-white">Your Questions, Our Priority – Contact Us</p>
                             <p class="font-monospace fs-5 text-white">Reach out to Mondson Trucking for reliable
                                 transportation services. We’re here to assist you with any inquiries or needs</p>
@@ -361,7 +361,7 @@
 
                         </div>
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-6 box13">
                         <img class="img-fluid" src="./assets/red-truck.webp" alt="">
                     </div>
                 </div>
@@ -766,10 +766,95 @@
 
         gsap.from('.box', {
             scrollTrigger: '.box', // start animation when ".box" enters the viewport
-            y: 500,
+            y: 100,
             // opacity: 0,
+            duration: 3
+        });
+
+        gsap.from('.box1', {
+            scrollTrigger: '.box1', // start animation when ".box" enters the viewport
+            y: 200,
+            opacity: 0,
+            duration: 3
+        });
+        gsap.from('.box2', {
+            scrollTrigger: '.box2', // start animation when ".box" enters the viewport
+            y: 100,
+            opacity: 0,
+            duration: 2
+        });
+
+        gsap.from('.box3', {
+            scrollTrigger: '.box3', // start animation when ".box" enters the viewport
+            y: 50,
+            opacity: 0,
             duration: 1
         });
+
+        gsap.from('.box4', {
+            scrollTrigger: '.box4', // start animation when ".box" enters the viewport
+            y: 50,
+            opacity: 0,
+            duration: 2
+        });
+
+        gsap.from('.box5', {
+            scrollTrigger: '.box5', // start animation when ".box" enters the viewport
+            y: 50,
+            opacity: 0,
+            duration: 3
+        });
+        gsap.from('.box6', {
+            scrollTrigger: '.box6', // start animation when ".box" enters the viewport
+            y: 50,
+            opacity: 0,
+            duration: 1
+        });
+        gsap.from('.box7', {
+            scrollTrigger: '.box7', // start animation when ".box" enters the viewport
+            y: 50,
+            opacity: 0,
+            duration: 2
+        });
+        gsap.from('.box8', {
+            scrollTrigger: '.box8', // start animation when ".box" enters the viewport
+            y: 50,
+            opacity: 0,
+            duration: 3
+        });
+
+        gsap.from('.box9', {
+            scrollTrigger: '.box9', // start animation when ".box" enters the viewport
+            y: 50,
+            opacity: 0,
+            duration: 1
+        });
+        gsap.from('.box10', {
+            scrollTrigger: '.box10', // start animation when ".box" enters the viewport
+            y: 50,
+            opacity: 0,
+            duration: 2
+        });
+        gsap.from('.box11', {
+            scrollTrigger: '.box11', // start animation when ".box" enters the viewport
+            y: 50,
+            opacity: 0,
+            duration: 3
+        });
+
+        gsap.from('.box12', {
+            scrollTrigger: '.box12', // start animation when ".box" enters the viewport
+            y: 50,
+            opacity: 0,
+            duration: 2
+        });
+        gsap.from('.box13', {
+            scrollTrigger: '.box13', // start animation when ".box" enters the viewport
+            y: 50,
+            opacity: 0,
+            duration: 3
+        });
+
     </script>
 </body>
 
