working on layout

--- a/index.html
+++ b/index.html
@@ -376,63 +376,98 @@
                 <p class="font-monospace fs-2 ">Expert Logistics Shipping for Your Needs</p>
             </div>
 
-            <div class="container text-center">
+            <div class="container ">
                 <div class="row text-white">
                     <div class="col">
                         <div class="row">
-                            <div class="col">
+                            <div class="col p-0">
 
-                                <img src="./assets/locker.png" alt="" width="30px">
 
-                                <p class="font-monospace text-white fs-3"> Dependable Service </p>
-                                <p class="font-monospace text-white fs-5"> We ensure on-time delivery with our fleet of
+                                <div class="clearfix">
+                                    <img class="float-md-start float-sm-none mx-auto d-block" src="./assets/locker.png"
+                                        alt="" width="30px">
+                                </div>
+                                <h2 class="p-0 text-md-end text-center"> Dependable Service </h2>
+
+
+                                <p class="font-monospace text-white fs-5 p-0 text-md-end text-center"> We ensure on-time
+                                    delivery with
+                                    our fleet
+                                    of
                                     53-foot reefer units, maintaining high standards of care. </p>
                             </div>
-                            <div class="row">
-
-                                <div class="col">
-
-                                    <img src="./assets/web.png" alt="" width="30px">
-                                    <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
-                                    <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
-                                        over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
-                                </div>
-                            </div>
                         </div>
-
-
-                    </div>
-                    <div class="col-12 col-md-6 py-5">
-                        <img class="img-fluid" src="./assets/truck-back.webp" alt="">
-
-                    </div>
-
-
-
-
-
-                    <div class="col pt-2 text-center">
-
                         <div class="row">
-                            <div class="col">
 
-                                <img src="./assets/locker.png" alt="" width="30px">
+                            <div class="col p-0">
 
-                                <p class="font-monospace text-white fs-3"> Dependable Service </p>
-                                <p class="font-monospace text-white fs-5"> We ensure on-time delivery with our fleet of
+                                <div class="clearfix">
+
+                                    <img class="float-md-start float-sm-none mx-auto d-block" src="./assets/web.png"
+                                        alt="" width="30px">
+                                </div>
+                                <h2 class="p-0 text-nowrap text-md-end text-center">Specialized Equipment</h2>
+                                <p class="font-monospace text-white fs-5 p-0 text-md-end text-center"> We ensure on-time
+                                    delivery
+                                    with
+                                    our fleet
+                                    of
                                     53-foot reefer units, maintaining high standards of care. </p>
                             </div>
-                            <div class="row">
+                        </div>
 
-                                <div class="col">
 
-                                    <img src="./assets/web.png" alt="" width="30px">
-                                    <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
-                                    <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
-                                        over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
+
+                    </div>
+                    <div class="col-12 col-md-4 py-5  h-100">
+                        <img class="img-fluid" src="./assets/truck-back.webp" alt="" style="height: 100%;">
+                    </div>
+
+
+
+
+
+                    <div class="col">
+                        <div class="row">
+                            <div class="col p-0 text-sm-center">
+
+
+                                <div class="clearfix">
+                                    <img class="float-md-start float-sm-none mx-auto d-block" src="./assets/locker.png"
+                                        alt="" width="30px">
                                 </div>
+                                <h2 class="p-0 text-md-start text-center"> Dependable Service </h2>
+
+
+                                <p class="font-monospace text-white fs-5 p-0 text-md-start text-center"> We ensure
+                                    on-time delivery
+                                    with
+                                    our fleet
+                                    of
+                                    53-foot reefer units, maintaining high standards of care. </p>
                             </div>
                         </div>
+                        <div class="row">
+
+                            <div class="col p-0">
+
+                                <div class="clearfix">
+
+                                    <img class="float-md-start float-sm-none mx-auto d-block" src="./assets/web.png"
+                                        alt="" width="30px">
+                                </div>
+                                <h2 class="p-0 text-nowrap text-md-start text-center">Specialized Equipment</h2>
+                                <p class="font-monospace text-white fs-5 p-0 text-md-start text-center"> We ensure
+                                    on-time delivery
+                                    with
+                                    our fleet
+                                    of
+                                    53-foot reefer units, maintaining high standards of care. </p>
+                            </div>
+                        </div>
+
+
+
                     </div>
 
                 </div>
