--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </header>
 
     <main>
-
+        <!-- 1st section -->
         <section class="bg-dark">
             <div class="container-fluid bg-img-1 ">
 
@@ -163,6 +163,7 @@
                 </div>
             </div>
         </section>
+        <!-- 2nd section -->
         <section class="bg-dark py-5">
 
             <div class="">
@@ -221,7 +222,7 @@
             </div>
         </section>
 
-        <!-- 2nd section -->
+        <!-- 3rd section -->
         <section class="bg-black pt-5 pb-5">
 
 
@@ -340,7 +341,7 @@
 
         </section>
 
-        <!--  -->
+        <!-- 4th section -->
         <section class="bg-dark">
 
 
@@ -369,57 +370,66 @@
 
         </section>
 
-
+        <!-- 5th section -->
         <section class="bg-dark p-5">
             <div class="container text-center text-white">
-                <p class="font-monospace fs-5 text-danger">WHY CHOOSE US</p>
-                <p class="font-monospace fs-2 ">Expert Logistics Shipping for Your Needs</p>
+                <p class="font-monospace fs-5 text-danger five-box1">WHY CHOOSE US</p>
+                <h1 class="font-monospace  five-box2">Expert Logistics Shipping for Your Needs</h1>
             </div>
 
             <div class="container ">
                 <div class="row text-white">
                     <div class="col">
                         <div class="row">
-                            <div class="col p-0">
+                            <div class="col p-0 ">
+                                <div class="five-box3">
 
 
-                                <div class="clearfix">
-                                    <img class="float-md-start float-sm-none mx-auto d-block" src="./assets/locker.png"
-                                        alt="" width="30px">
+                                    <div class="clearfix">
+                                        <img class="float-md-start float-sm-none mx-auto d-block"
+                                            src="./assets/locker.png" alt="" width="30px">
+                                    </div>
+                                    <h2 class="p-0 text-md-end text-center"> Dependable Service </h2>
+
+
+                                    <p class="font-monospace text-white fs-5 p-0 text-md-end text-center"> We ensure
+                                        on-time
+                                        delivery with
+                                        our fleet
+                                        of
+                                        53-foot reefer units, maintaining high standards of care. </p>
                                 </div>
-                                <h2 class="p-0 text-md-end text-center"> Dependable Service </h2>
 
-
-                                <p class="font-monospace text-white fs-5 p-0 text-md-end text-center"> We ensure on-time
-                                    delivery with
-                                    our fleet
-                                    of
-                                    53-foot reefer units, maintaining high standards of care. </p>
                             </div>
                         </div>
                         <div class="row">
 
                             <div class="col p-0">
+                                <div class="five-box4">
 
-                                <div class="clearfix">
 
-                                    <img class="float-md-start float-sm-none mx-auto d-block" src="./assets/web.png"
-                                        alt="" width="30px">
+
+                                    <div class="clearfix">
+
+                                        <img class="float-md-start float-sm-none mx-auto d-block" src="./assets/web.png"
+                                            alt="" width="30px">
+                                    </div>
+                                    <h2 class="p-0 text-nowrap text-md-end text-center">Specialized Equipment</h2>
+                                    <p class="font-monospace text-white fs-5 p-0 text-md-end text-center"> We ensure
+                                        on-time
+                                        delivery
+                                        with
+                                        our fleet
+                                        of
+                                        53-foot reefer units, maintaining high standards of care. </p>
                                 </div>
-                                <h2 class="p-0 text-nowrap text-md-end text-center">Specialized Equipment</h2>
-                                <p class="font-monospace text-white fs-5 p-0 text-md-end text-center"> We ensure on-time
-                                    delivery
-                                    with
-                                    our fleet
-                                    of
-                                    53-foot reefer units, maintaining high standards of care. </p>
                             </div>
                         </div>
 
 
 
                     </div>
-                    <div class="col-12 col-md-4 py-5  h-100">
+                    <div class="col-12 col-md-4 py-5  h-100 five-box5">
                         <img class="img-fluid" src="./assets/truck-back.webp" alt="" style="height: 100%;">
                     </div>
 
@@ -430,21 +440,25 @@
                     <div class="col">
                         <div class="row">
                             <div class="col p-0 text-sm-center">
+                                <div class="five-box6">
 
 
-                                <div class="clearfix">
-                                    <img class="float-md-start float-sm-none mx-auto d-block" src="./assets/locker.png"
-                                        alt="" width="30px">
+
+
+                                    <div class="clearfix">
+                                        <img class="float-md-start float-sm-none mx-auto d-block"
+                                            src="./assets/locker.png" alt="" width="30px">
+                                    </div>
+                                    <h2 class="p-0 text-md-start text-center"> Dependable Service </h2>
+
+
+                                    <p class="font-monospace text-white fs-5 p-0 text-md-start text-center"> We ensure
+                                        on-time delivery
+                                        with
+                                        our fleet
+                                        of
+                                        53-foot reefer units, maintaining high standards of care. </p>
                                 </div>
-                                <h2 class="p-0 text-md-start text-center"> Dependable Service </h2>
-
-
-                                <p class="font-monospace text-white fs-5 p-0 text-md-start text-center"> We ensure
-                                    on-time delivery
-                                    with
-                                    our fleet
-                                    of
-                                    53-foot reefer units, maintaining high standards of care. </p>
                             </div>
                         </div>
                         <div class="row">
@@ -790,107 +804,12 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 
     <script src="./gsap.min.js"></script>
+    <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-    <script>
-        gsap.registerPlugin(ScrollTrigger);
 
-
-
-        gsap.from('.box', {
-            scrollTrigger: '.box', // start animation when ".box" enters the viewport
-            y: 100,
-            // opacity: 0,
-            duration: 3
-        });
-
-        gsap.from('.box1', {
-            scrollTrigger: '.box1', // start animation when ".box" enters the viewport
-            y: 200,
-            opacity: 0,
-            duration: 3
-        });
-        gsap.from('.box2', {
-            scrollTrigger: '.box2', // start animation when ".box" enters the viewport
-            y: 100,
-            opacity: 0,
-            duration: 2
-        });
-
-        gsap.from('.box3', {
-            scrollTrigger: '.box3', // start animation when ".box" enters the viewport
-            y: 50,
-            opacity: 0,
-            duration: 1
-        });
-
-        gsap.from('.box4', {
-            scrollTrigger: '.box4', // start animation when ".box" enters the viewport
-            y: 50,
-            opacity: 0,
-            duration: 2
-        });
-
-        gsap.from('.box5', {
-            scrollTrigger: '.box5', // start animation when ".box" enters the viewport
-            y: 50,
-            opacity: 0,
-            duration: 3
-        });
-        gsap.from('.box6', {
-            scrollTrigger: '.box6', // start animation when ".box" enters the viewport
-            y: 50,
-            opacity: 0,
-            duration: 1
-        });
-        gsap.from('.box7', {
-            scrollTrigger: '.box7', // start animation when ".box" enters the viewport
-            y: 50,
-            opacity: 0,
-            duration: 2
-        });
-        gsap.from('.box8', {
-            scrollTrigger: '.box8', // start animation when ".box" enters the viewport
-            y: 50,
-            opacity: 0,
-            duration: 3
-        });
-
-        gsap.from('.box9', {
-            scrollTrigger: '.box9', // start animation when ".box" enters the viewport
-            y: 50,
-            opacity: 0,
-            duration: 1
-        });
-        gsap.from('.box10', {
-            scrollTrigger: '.box10', // start animation when ".box" enters the viewport
-            y: 50,
-            opacity: 0,
-            duration: 2
-        });
-        gsap.from('.box11', {
-            scrollTrigger: '.box11', // start animation when ".box" enters the viewport
-            y: 50,
-            opacity: 0,
-            duration: 3
-        });
-
-        gsap.from('.box12', {
-            scrollTrigger: '.box12', // start animation when ".box" enters the viewport
-            y: 50,
-            opacity: 0,
-            duration: 2
-        });
-        gsap.from('.box13', {
-            scrollTrigger: '.box13', // start animation when ".box" enters the viewport
-            y: 50,
-            opacity: 0,
-            duration: 3
-        });
-
-    </script>
 </body>
 
 </html>
