--- a/index.html
+++ b/index.html
@@ -464,19 +464,23 @@
                         <div class="row">
 
                             <div class="col p-0">
+                                <div class="five-box7">
 
-                                <div class="clearfix">
 
-                                    <img class="float-md-start float-sm-none mx-auto d-block" src="./assets/web.png"
-                                        alt="" width="30px">
+
+                                    <div class="clearfix">
+
+                                        <img class="float-md-start float-sm-none mx-auto d-block" src="./assets/web.png"
+                                            alt="" width="30px">
+                                    </div>
+                                    <h2 class="p-0 text-nowrap text-md-start text-center">Specialized Equipment</h2>
+                                    <p class="font-monospace text-white fs-5 p-0 text-md-start text-center"> We ensure
+                                        on-time delivery
+                                        with
+                                        our fleet
+                                        of
+                                        53-foot reefer units, maintaining high standards of care. </p>
                                 </div>
-                                <h2 class="p-0 text-nowrap text-md-start text-center">Specialized Equipment</h2>
-                                <p class="font-monospace text-white fs-5 p-0 text-md-start text-center"> We ensure
-                                    on-time delivery
-                                    with
-                                    our fleet
-                                    of
-                                    53-foot reefer units, maintaining high standards of care. </p>
                             </div>
                         </div>
 
