--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     .bg-img {
         background: url("./assets/front-side.webp") no-repeat center center;
         background-size: cover;
-        width: 50%;
+        /* width: 50%; */
         height: 800px;
         opacity: 0.5;
     }
@@ -386,7 +386,7 @@
 
 
                                     <div class="clearfix">
-                                        <img class="float-md-start float-sm-none mx-auto d-block"
+                                        <img class="float-md-end float-sm-none mx-auto d-block"
                                             src="./assets/locker.png" alt="" width="30px">
                                     </div>
                                     <h2 class="p-0 text-md-end text-center"> Dependable Service </h2>
@@ -411,7 +411,7 @@
 
                                     <div class="clearfix">
 
-                                        <img class="float-md-start float-sm-none mx-auto d-block" src="./assets/web.png"
+                                        <img class="float-md-end float-sm-none mx-auto d-block" src="./assets/web.png"
                                             alt="" width="30px">
                                     </div>
                                     <h2 class="p-0 text-nowrap text-md-end text-center">Specialized Equipment</h2>
@@ -493,7 +493,7 @@
             </div>
         </section>
 
-
+        <!-- 6th section -->
         <section class="bg-dark py-5">
             <div class="container">
                 <div class="row gx-5">
@@ -603,9 +603,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!--  -->
 
-                        <!--  -->
 
 
                     </div>
@@ -613,25 +611,27 @@
                     <div class="col-12 col-md-6 g-5 pt-sm-5 order-md-1 order-0">
                         <div class="col">
 
+                            <div class="six-box1">
+
+                                <p class="text-danger font-monospace lead">Testimonials</p>
 
 
-                            <p class="text-danger font-monospace lead">Testimonials</p>
+                                <p class="text-white font-monospace text-wrap fs-3">Exceptional Service and Reliability
 
+                                </p>
 
-                            <p class="text-white font-monospace text-wrap fs-3">Exceptional Service and Reliability
-
-                            </p>
-
-                            <p class=" font-monospace fs-6">
+                                <p class=" font-monospace fs-6">
 
 
 
 
-                                Our fresh freight on time and in perfect condition. Their personal touch and
+                                    Our fresh freight on time and in perfect condition. Their personal touch and
 
-                                professionalism make them a top choice!
+                                    professionalism make them a top choice!
 
-                            </p>
+                                </p>
+                            </div>
+
 
                         </div>
 
@@ -642,54 +642,61 @@
 
 
             </div>
-            </div>
+
 
         </section>
 
+
+        <!-- 7th section  -->
         <section class="py-5 bg-dark">
             <div class="container">
                 <div class="row gx-5 align-items-center">
                     <div class="col-12 col-md-6">
-                        <p class="font-monospace fs-5 text-danger">CONTACT US</p>
-                        <p class="font-monospace fs-3 ">
-
-                            Get in Touch Anytime, Anywhere
-
-                        </p>
+                        <div class="seven-box1">
 
 
-                        <p class="font-monospace fs-5">Contact us for personalized service and expert transportation
-                            solutions. We’re here to assist you!</p>
-                        <hr>
-                        <div class="row ">
-                            <div class="col">
-                                <div class="row ">
-                                    <div class="col-2 d-flex text-align-center">
-                                        <img class="img-fluid" src="./assets/phone-call.png" alt="">
+
+                            <p class="font-monospace fs-5 text-danger">CONTACT US</p>
+                            <p class="font-monospace fs-3 ">
+
+                                Get in Touch Anytime, Anywhere
+
+                            </p>
+
+
+                            <p class="font-monospace fs-5">Contact us for personalized service and expert transportation
+                                solutions. We’re here to assist you!</p>
+                            <hr>
+                            <div class="row ">
+                                <div class="col">
+                                    <div class="row ">
+                                        <div class="col-2 d-flex text-align-center">
+                                            <img class="img-fluid" src="./assets/phone-call.png" alt="">
+                                        </div>
+                                        <div class="col">
+                                            <p>Our Phone</p>
+                                            <p class="font-monospace fs-3">(855) 518-2854 </p>
+                                        </div>
                                     </div>
-                                    <div class="col">
-                                        <p>Our Phone</p>
-                                        <p class="font-monospace fs-3">(855) 518-2854 </p>
-                                    </div>
+
+
+
+
+
                                 </div>
 
-
-
-
-
                             </div>
+                            <div class="row py-5">
+                                <div class="col">
 
-                        </div>
-                        <div class="row py-5">
-                            <div class="col">
-
-                                <div class="row ">
-                                    <div class="col-2 d-flex text-align-center">
-                                        <img class="img-fluid" src="./assets/email-fill.png" alt="">
-                                    </div>
-                                    <div class="col">
-                                        <p>Our Email</p>
-                                        <p class="font-monospace fs-3">Dispatch@mondsontrucking.com </p>
+                                    <div class="row ">
+                                        <div class="col-2 d-flex text-align-center">
+                                            <img class="img-fluid" src="./assets/email-fill.png" alt="">
+                                        </div>
+                                        <div class="col">
+                                            <p>Our Email</p>
+                                            <p class="font-monospace fs-3">Dispatch@mondsontrucking.com </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -697,7 +704,8 @@
                     </div>
 
 
-                    <div class="col-12 col-md-6 bg-img w-100" style="width: 100%;"></div>
+
+                    <div class="col-12 col-md-6 bg-img "></div>
 
                     <hr>
 
@@ -708,14 +716,14 @@
 
         <section class="bg-dark py-5">
             <div class="container-fluid">
-                <div class="row gx-5">
-                    <div class="col-12 col-md-4 bg-black mx-2 py-5">
+                <div class="row gx-5 ">
+                    <div class="col-12 col-md-4 bg-black mx-2 py-5 my-2">
                         <div class="d-flex align-items-center">
                             <img src="./assets/location.png" alt="" width="30px">
                             <p class="font-monospace mb-0 ms-2">222 Strickland AVE Blackshear, GA, 31516</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 bg-black mx-2 py-5">
+                    <div class="col-12 col-md-4 bg-black mx-2 py-5 my-2">
                         <div class="d-flex align-items-center">
                             <img src="./assets/phone.png" alt="" width="30px">
                             <p class="font-monospace">
@@ -723,7 +731,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3 bg-black mx-2 py-5">
+                    <div class="col-12 col-md-3 bg-black mx-2 py-5 my-2">
                         <div class="d-flex align-items-center">
                             <img src="./assets/mail.png" alt="" width="30px">
                             <p class="font-monospace">
