--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
         <section class="bg-dark py-5">
             <div class="container-fluid">
                 <div class="row gx-5 ">
-                    <div class="col-12 col-md-4 bg-black mx-2 py-5 my-2">
+                    <div class="col-12 col-md-4 bg-black mx-2 py-5 my-2 overflow-hidden">
                         <div class="d-flex align-items-center">
                             <img src="./assets/location.png" alt="" width="30px">
                             <p class="font-monospace mb-0 ms-2">222 Strickland AVE Blackshear, GA, 31516</p>
